--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,41 +31,17 @@
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/form.html">회원가입</a></li>
-					<li><a href="/list.html">사용자 목록 </a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
-	<div class="container">
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="/webjars/jquery/3.3.1-2/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
-		<form action="/create" method="post">
-			<div class="form-group">
-				<label for="userId">사용자 아이디</label> <input
-					type="text" class="form-control" name="userId"
-					placeholder="사용자 아이디">
-			</div>
-			<div class="form-group">
-				<label for="password">Password</label> <input
-					type="password" class="form-control" name="password"
-					placeholder="비밀번호">
-			</div>
-			<div class="form-group">
-				<label for="name">이름</label> <input
-					type="text" class="form-control" name="name"
-					placeholder="이름">
-			</div>
-			<div class="form-group">
-				<label for="email">이메일</label> <input
-					type="email" class="form-control" name="email"
-					placeholder="이메일">
-			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
-		</form>
-	</div>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="/webjars/jquery/3.3.1-2/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+	<h1>Hello, world! Templates</h1>
+	안녕하세요!
 </body>
 </html>
