--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,13 +24,14 @@
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">SLiPP</a>
+				<a class="navbar-brand" href="/">SLiPP</a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse"
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="/form.html">회원가입</a></li>
+					<li><a href="/list">사용자 목록</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
