--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -21,7 +21,7 @@
                   <label for="password">비밀번호</label>
                   <input type="password" class="form-control" id="password" name="password" placeholder="Password">
               </div>
-              <div class="form-group">
+              <div class="form-group">ˇ
                   <label for="name">이름</label>
                   <input class="form-control" id="name" name="name" placeholder="Name" value="{{name}}">
               </div>
@@ -37,9 +37,6 @@
     </div>
 </div>
 
-<!-- script references -->
-<script src="../js/jquery-2.2.0.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/scripts.js"></script>
+{{> /include/footer}}
 	</body>
 </html>
