--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -2,3 +2,14 @@
 <script src="../js/jquery-2.2.0.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/scripts.js"></script>
+<script>
+$(function() {
+	$(".menu-li").click(function(){
+		console.log();
+		alert("stop for console log");
+		$(this).removeClass("active");
+	});
+	
+});
+
+</script>
